agregado proyecto bitacora

--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -5,7 +5,7 @@
   <div class="row featurette">
     <div class="col-md-7">
       <h2 class="featurette-heading">
-        Task List:
+        Lista de tareas:
         <span class="text-muted">Angular</span>
       </h2>
       <p class="lead">
@@ -30,23 +30,22 @@
   <div class="row featurette">
     <div class="col-md-7 order-md-2">
       <h2 class="featurette-heading">
-        BackEnd:
-        <span class="text-muted">JAVA y PHP</span>
+        Bitácora:
+        <span class="text-muted">Angular + MySQL + JAVA</span>
       </h2>
       <p class="lead">
-        JAVA es la base para prácticamente todos los tipos de aplicaciones de
-        red, además del estándar global para desarrollar y distribuir
-        aplicaciones móviles y embebidas, juegos, contenido basado en web y
-        software de empresa.
-      </p>
-      <p class="lead">
-        PHP (acrónimo recursivo de PHP: Hypertext Preprocessor ) es un lenguaje
-        de código abierto muy popular especialmente adecuado para el desarrollo
-        web y que puede ser incrustado en HTML.
+        Guarda las memorias de tus viajes, usalo como diario o como recordatorio
+        de tus viajes. Este proyecto fue desarrollado con Angular 14, MySQL y
+        Java.
       </p>
     </div>
     <div class="col-md-5 order-md-1">
-      <img src="" alt="" />
+      <img
+        src="../../../assets/images/logbook.png"
+        alt="logbook"
+        width="200"
+        height="200"
+      />
     </div>
   </div>
   <hr class="featurette-divider" />
