modificaciones menores - problema con deploy

--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -12,21 +12,21 @@
         <div class="col-md-4">
           <h1>
             <a href="https://www.linkedin.com/in/luca-terzariol-63711239/">
-              <fa-icon [icon]="faLinkedinIn"></fa-icon>
+              <fa-icon [icon]="faLinkedinIn" id="LI"></fa-icon>
             </a>
           </h1>
         </div>
         <div class="col-md-4">
           <h1>
             <a href="https://github.com/Teradriel">
-              <fa-icon [icon]="faGithub"></fa-icon>
+              <fa-icon [icon]="faGithub" id="GH"></fa-icon>
             </a>
           </h1>
         </div>
         <div class="col-md-4">
           <h1>
             <a href="mailto:inglterzariol@gmail.com">
-              <fa-icon [icon]="faEnvelope"></fa-icon>
+              <fa-icon [icon]="faEnvelope" id="Mail"></fa-icon>
             </a>
           </h1>
         </div>
